# cli-coding-agent

./: .gitignore  README.md  cheikh.html  command_safety.py  executor.py  fs_ops.py  funny.html  git_ops.py  index.html  intents.py  llm.py  main.py  memory.py  patcher.py  planner.py  pyproject.toml  random.py  sandbox.py  time.html  world_time.html
.agent/: .repl_history  sandbox.json
DOCS/: feedback.md
providers/: e2b_sandbox.py  local_sandbox.py
src/cherno/: cli.py
src/cherno.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_command_safety.py  test_executor.py  test_fs_ops.py  test_intents.py  test_patcher.py  test_planner.py
